# algoworld-contracts

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  algob.config.js  package.json  pyproject.toml  pytest.ini  renovate.json  requirements.txt  test.py
.github/workflows/: awe-swapper-build-test.yaml  ci.yaml  codeql-analysis.yml  release.yaml
algobpy/: parse.py
algoworld_contracts/: contracts.py
algoworld_contracts/Algoworld_gitcointask/: README.md  requirements.txt
algoworld_contracts/auction/: clear.py  escrow.py  manager.py  proxy.py
algoworld_contracts/common/: utils.py
algoworld_contracts/swapper/: asa_to_asa_swapper.py  asas_to_algo_swapper.py  swap_proxy.py
algoworld_swapper/: asa_to_asa_swapper.py  asas_to_algo_swapper.py
algoworld_swapper/utils/: __init__.py
artifacts/cache/: escrow.py.yaml  fee-check.teal.yaml
artifacts/scripts/: 0-sampleScript.ts.cp.yaml  1-sampleScript.ts.cp.yaml  2-escrow-account.ts.cp.yaml
src/: algoworldswapper.py  asa_to_asa_swapper.py  asas_to_algo_swapper.py  contracts.py  multiasaswapper.py
src/auction/: clear.py  escrow.py  manager.py  proxy.py
src/auction/helpers/: state.py
src/common/: utils.py
src/swapper/: asa_to_asa_swapper.py  asas_to_algo_swapper.py  swap_proxy.py
src/swapper/utils/: __init__.py
src/utils/: __init__.py  utils.py
tests/: conftest.py  test_algoworldswapper.py  test_asa_to_asa_swapper.py  test_asas_to_algo_swapper.py  test_contracts.py  test_multiasaswapper.py  test_swapper.py
tests/auction/: test_auction.py  utils.py
tests/common/: __init__.py  constants.py  test_utils.py  utils.py
tests/helpers/: __init__.py  constants.py  utils.py
tests/models/: __init__.py  models.py
tests/sandbox/: docker-compose.yaml
tests/src/: test_algoworldswapper.py
tests/swapper/: test_asa_to_asa_swapper.py  test_asas_to_algo_swapper.py  test_swap_proxy.py
tests/utils/: __init__.py  utils.py
