[tool.poetry]
name = "algoworld_contracts"
version = "1.3.1"
description = "AlgoWorld Smart Contracts and Signatures"
authors = ["AlgoWorld <info@algoworld.io>"]
keywords = ["algoworld", "algorand", "blockchain", "pyteal", "smart contracts"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/AlgoWorldNFT/algoworld-contracts"
repository = "https://github.com/AlgoWorldNFT/algoworld-contracts"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
py-algorand-sdk = "1.13.1"
PyYAML = "6.0"
pyteal = "0.10.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pytest = "^7.0.0"
pytest-depends = "^1.0.1"
requests = "^2.27.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.semantic_release]
version_variable = [
    "algoworld_contracts/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "testing_sem_release"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
